--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -1,6 +1,6 @@
 <section id="header" class="clearfix container_12">
   <header id="main" class="grid_4 alpha">
-    <h1><%= link_to "Davi Ferreira", blog_url %></h1>
+    <h1><%= link_to "Davi Ferreira", blog_url(:locale => I18n.locale) %></h1>
   </header>
   <nav class="grid_8">
     <ul>
