--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="<%= I18n.locale.to_s.downcase %>">
 <head>
   <meta charset="utf-8">
   <title><%= meta_title %></title>
