--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,8 @@
 <section id="posts_index" class="container_12">
-
   <% @posts.each do |post| %>
   <article class="clearfix">
     <aside class="grid_4">
-      <time datetime="<%= post.published_date.to_s[0..9] %>"><em>/</em><%= l post.published_date, :format => '%d de %B de %Y' %></time>
+      <time datetime="<%= post.published_date.to_s[0..9] %>"><em>/</em><%= l post.published_date, :format => @date_format %></time>
       <% if not from_tableless(post) and (not post.block_comments or not post.comments.published.empty?) %>
         <div class="comments">
           <em>+</em><%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %>
