--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,10 +4,10 @@
 		<time datetime="<%= comment.created_at %>" pubdate><%= l comment.created_at, :format => "%d/%m/%Y" %><br /><%= l comment.created_at, :format => "%H:%M" %></time>
 	</div>
 	<div class="comment grid_10">
-		<p><strong><% if comment.url != "" %><%= link_to comment.author, check_for_http(comment.url) %><% else %><%= comment.author %><% end %> escreveu:</strong></p>
+    <p><strong><% if comment.url != "" %><%= link_to comment.author, check_for_http(comment.url) %><% else %><%= comment.author %><% end %> <%= t :said %>:</strong></p>
 		<p><%= sanitize_preserving_code comment.body %></p>
 		<% unless @post.block_comments %>
-    <p class="reply"><%= link_to "Responder", reply_comment_path(comment), :id => "lnk-reply-#{comment.id}" %></p>
+      <p class="reply"><%= link_to(t(:reply), reply_comment_path(comment), :id => "lnk-reply-#{comment.id}") %></p>
     <% end %>
   </div>
   
