--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -54,7 +54,7 @@
 <% if not @post.block_comments %>
 <section id="comments-form" class="container_12 clearfix">
 	<header>
-		<h3 id="tit-form-comment">Deixe seu comentário:</h3>
+    <h3 id="tit-form-comment"><%= t :leave_your_comment %>:</h3>
 	</header>
   <%= render "comments/form", :id => "new_comment" %>
 </section>
