--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <section id="comment-<%=comment.id%>" class="comment<% if comment.author == "Davi Ferreira" %> owner<% end %><% if not comment.comment_id.nil? and comment.comment_id > 0 %> reply<% end %> container_12 clearfix">
 	<div class="author grid_2">
 		<p class="image-wrap"><%= gravatar_for comment %></p>
-		<time datetime="<%= comment.created_at %>" pubdate><%= l comment.created_at, :format => "%d/%m/%Y" %><br /><%= l comment.created_at, :format => "%H:%M" %></time>
+    <time datetime="<%= comment.created_at %>" pubdate><%= l comment.created_at, :format => :short %><br /><%= l comment.created_at, :format => "%H:%M" %></time>
 	</div>
 	<div class="comment grid_10">
     <p><strong><% if comment.url != "" %><%= link_to comment.author, check_for_http(comment.url) %><% else %><%= comment.author %><% end %> <%= t :said %>:</strong></p>
