Changes locale value on post form.

--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -33,7 +33,7 @@
   </fieldset>
   
   <fieldset>
-    <%= f.radio_button :locale, 'pt-br', :checked => true %> 
+    <%= f.radio_button :locale, 'pt-BR', :checked => true %> 
     <%= f.label "locale_pt-br", "Português" %>
   </fieldset>
   
