--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -1,13 +1,19 @@
-<section id="header" class="clearfix container_12">
-  <header id="main" class="grid_4 alpha">
-    <h1><%= link_to "Davi Ferreira", blog_url(:locale => I18n.locale) %></h1>
+<section id="sidebar">
+  <header>
+    <hgroup>
+      <a href="<%= blog_url(:locale => I18n.locale) %>">
+        <h1>Davi Ferreira</h1>
+        <h2>/blog</h2>
+      </a>
+    </hgroup>
   </header>
-  <nav class="grid_8">
-    <ul>
-      <li><a href="/" title="Portfolio">Portfolio</a></li>
-      <li><a href="http://www.github.com/daviferreira" title="Github">Github</a></li>
-      <li><a href="http://www.twitter.com/davitferreira" title="Twitter">Twitter</a></li>
-      <li><a href="http://br.linkedin.com/in/daviferreira" title="Linkedin">Linkedin</a></li>
-    </ul>
+  <nav>
+    <a href="arquivo.html">Arquivo</a>
+    <a href="categorias.html">Categorias</a>
+    <a href="#">Portfólio</a>
+    <a href="#">Twitter</a>
+    <a href="#">Github</a>
+    <a href="#">Linkedin</a>
   </nav>
+  <div id="lang"><i class="icon-circle-arrow-right"></i> <a href="#">Switch to english</a></div>
 </section>
