--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,50 +1,21 @@
-<div class="span8 offset4">
-  <section id="content">
-    <% @posts.each do |post| %>
-    <article>
-      <header>
-        <h1><a href="<%= post_url(post) %>"><%= post.title %></a></h1>
-      </header>
+<% @posts.each do |post| %>
+<article>
+  <header>
+    <h1><a href="<%= post_url(post) %>"><%= post.title %></a></h1>
+  </header>
 
-      <%= raw post.body %>
+  <%= raw post.body %>
 
-      <div class="info">
-        <ul class="clearfix">
-          <li><time datetime="<%= post.published_date.to_s[0..9] %>"><%= l post.published_date %></time></li>
-          <% if not from_tableless(post) and not post.block_comments %>
-          <li><i class="icon-comment"></i> <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %></li>
-          <% end %>
-          <li><i class="icon-tags"></i> tagged under <a href="#">javascript</a>, <a href="#">tableless</a></li>
-        </ul>
-      </div>
-    </article>
-    <% end %>
-
-  </section>
-</div>
-
-
-<!-- section id="posts_index" class="container_12">
-  <% @posts.each do |post| %>
-  <article class="clearfix">
-    <aside class="grid_4">
-      <time datetime="<%= post.published_date.to_s[0..9] %>"><em>/</em><%= l post.published_date %></time>
-      <% if not from_tableless(post) and (not post.block_comments or not post.comments.published.empty?) %>
-        <div class="comments">
-          <em>+</em><%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %>
-        </div>
+  <div class="info">
+    <ul class="clearfix">
+      <li><time datetime="<%= post.published_date.to_s[0..9] %>"><%= l post.published_date %></time></li>
+      <% if not from_tableless(post) and not post.block_comments %>
+      <li><i class="icon-comment"></i> <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %></li>
       <% end %>
-      <% if from_tableless(post) %><p><span class="label tableless">Tableless</span></p><% end %>
-    </aside>
-    <section class="grid_8">
-      <a href="<%= post_url(post) %>">
-    	  <header>
-          <h2><%= post.title %></h2>
-        </header>
-        <p><%= post.abstract %></p>
-      </a>
-    </section>
-  </article>
-  <% end %>
-  
-</section -->
+      <li><i class="icon-tags"></i> tagged under <a href="#">javascript</a>, <a href="#">tableless</a></li>
+    </ul>
+  </div>
+</article>
+<% end %>
+
+<%= will_paginate @posts %>
