--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -8,12 +8,12 @@
     </hgroup>
   </header>
   <nav>
-    <a href="arquivo.html">Arquivo</a>
-    <a href="categorias.html">Categorias</a>
-    <a href="#">Portfólio</a>
-    <a href="#">Twitter</a>
-    <a href="#">Github</a>
-    <a href="#">Linkedin</a>
+    <%= link_to "Arquivo", posts_archive_url %>
+    <%= link_to "Categorias", posts_categories_url %>
+    <a href="http://www.daviferreira.com">Portfólio</a>
+    <a href="http://www.twitter.com/davitferreira">Twitter</a>
+    <a href="http://www.github.com/daviferreira">Github</a>
+    <a href="http://www.linkedin.com/in/daviferreira">Linkedin</a>
   </nav>
-  <div id="lang"><i class="icon-circle-arrow-right"></i> <a href="#">Switch to english</a></div>
+  <!-- div id="lang"><i class="icon-circle-arrow-right"></i> <a href="#">Switch to english</a></div -->
 </section>
