Comenta tag no post.

--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -8,6 +8,7 @@
     </hgroup>
   </header>
   <nav>
+    <%= link_to "Posts", posts_url %>
     <%= link_to "Arquivo", posts_archive_url %>
     <%= link_to "Categorias", posts_categories_url %>
     <a href="http://www.daviferreira.com">Portfólio</a>
