Corrige visual da paginação.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,4 +18,4 @@
 </article>
 <% end %>
 
-<%= will_paginate @posts %>
+<%= will_paginate @posts, :next_label => "&rarr;", :previous_label => "&larr;" %>
