--- a/app/views/projects/index.js.erb
+++ b/app/views/projects/index.js.erb
@@ -30,3 +30,5 @@ $("a[rel*=external]").attr( "target", "_blank" );
 $('html, body').animate({
     scrollTop: $('#projects').offset().top
 }, 600);
+
+$('div.pagination li.active').removeClass("active");
