--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -78,7 +78,7 @@ code, pre {
   left:0;
   width:248px;
   height:100%;
-  background:#00a383;
+  background:#55d0a7;
 }
 
 #sidebar header {
@@ -179,6 +179,14 @@ code, pre {
   padding:0 0 40px 0;
 }
 
+#content article:first-child {
+  margin: 46px 0 0;
+}
+
+#content article h1 {
+  margin: 0 0;
+}
+
 #content article h1, #content article h2, #content article h3 {
   font-family:ProximaNovaSemiBold,  Arial,  sans-serif;
 }
@@ -200,7 +208,7 @@ code, pre {
   padding:10px 0 10px 0;
   color:#999;
   border-bottom:1px dashed #999;
-  border-top:6px solid #ff503e;
+  border-top:6px solid #333;
 }
 
 #content article .info ul {
