Corrige comentários no post.

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -251,7 +251,7 @@ code, pre {
 }
 
 #content .comments {
-  border-top:6px solid #ff503e;
+  border-top:6px solid #333;
 }
 
 #content .comments header {
