--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,22 @@
-<% @posts.each do |post| %>
-<article>
-  <header>
-    <h1><a href="<%= post_url(post) %>"><%= post.title %></a></h1>
-  </header>
+<div id="home">
+  <% @posts.each do |post| %>
+  <article>
+    <div class="info">
+      <ul class="clearfix">
+        <li><time datetime="<%= post.published_date.to_s[0..9] %>"><%= l post.published_date %></time></li>
+        <% if not from_tableless(post) and not post.block_comments %>
+        <li><i class="icon-comment"></i> <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %></li>
+        <% end %>
+        <!-- li><i class="icon-tags"></i> <a href="#">javascript</a>, <a href="#">tableless</a></li -->
+      </ul>
+    </div>
+    <header>
+      <h1><a href="<%= post_url(post) %>"><%= post.title %></a></h1>
+    </header>
 
-  <%= raw post.body %>
+    <%= raw post.body %>
 
-  <div class="info">
-    <ul class="clearfix">
-      <li><time datetime="<%= post.published_date.to_s[0..9] %>"><%= l post.published_date %></time></li>
-      <% if not from_tableless(post) and not post.block_comments %>
-      <li><i class="icon-comment"></i> <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %></li>
-      <% end %>
-      <!-- li><i class="icon-tags"></i> <a href="#">javascript</a>, <a href="#">tableless</a></li -->
-    </ul>
-  </div>
-</article>
-<% end %>
-
+  </article>
+  <% end %>
+</div>
 <%= will_paginate @posts, :next_label => "&rarr;", :previous_label => "&larr;" %>
