--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -180,7 +180,7 @@ code, pre {
 }
 
 #content article:first-child {
-  margin: 46px 0 0;
+  margin: 36px 0 0;
 }
 
 #content article h1 {
@@ -203,7 +203,7 @@ code, pre {
 
 #content article .info {
   display:block;
-  margin:40px 0 20px 0;
+  margin:20px 0;
   color:#000;
   padding:10px 0 10px 0;
   color:#999;
