--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
- <article class="single">
+ <article class="single clearfix">
             
     <header>
       <h1><a href="<%= post_url(@post) %>"><%= @post.title %></a></h1>
